[gd_scene load_steps=5 format=3 uid="uid://mugjtujtqc2w"]

[ext_resource type="Script" path="res://Objects/info_box.gd" id="1_mlqb8"]
[ext_resource type="StyleBox" uid="uid://cc3y63knchcv3" path="res://Assets/Styles/white_back_blue_borders.tres" id="1_vx2sn"]
[ext_resource type="PackedScene" uid="uid://l68yt0p14fpf" path="res://Objects/cool_button.tscn" id="2_pgvbk"]

[sub_resource type="LabelSettings" id="LabelSettings_ib550"]
font_size = 32
font_color = Color(0, 0, 0, 1)

[node name="InfoBox" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_mlqb8")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -189.5
offset_top = -223.0
offset_right = 189.5
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = ExtResource("1_vx2sn")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "text"
label_settings = SubResource("LabelSettings_ib550")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CoolButton" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_pgvbk")]
layout_mode = 2
size_flags_vertical = 8
text = "OK"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
